objects/HealthCloudGA__EhrObservation__c.object
<CustomObject>
    <description>Measurements and simple assertions made about a patient, device or other subject</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AppliesDateTime__c</fullName>
        <description>Physiologically Relevant time/time-period for observation</description>
        <inlineHelpText>Physiologically Relevant time/time-period for observation</inlineHelpText>
        <label>Applies Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AppliesPeriodEndDate__c</fullName>
        <description>Physiologically Relevant time/time-period for observation</description>
        <inlineHelpText>Physiologically Relevant time/time-period for observation</inlineHelpText>
        <label>Applies Period End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AppliesPeriodStartDate__c</fullName>
        <description>Physiologically Relevant time/time-period for observation</description>
        <inlineHelpText>Physiologically Relevant time/time-period for observation</inlineHelpText>
        <label>Applies Period Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BodySiteCode__c</fullName>
        <description>Body Site Symbol in syntax defined by the system</description>
        <label>Body Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BodySiteLabel__c</fullName>
        <label>Body Site Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BodySiteSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Body Site System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Comments__c</fullName>
        <description>Comments about result</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>HealthCloudGA__EhrDevice__c</referenceTo>
        <relationshipLabel>EHR Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InterpretationCode__c</fullName>
        <description>Interpretation Symbol in syntax defined by the system</description>
        <label>Interpretation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InterpretationLabel__c</fullName>
        <label>Interpretation Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InterpretationSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Interpretation System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IssuedDate__c</fullName>
        <label>Issued Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MethodCode__c</fullName>
        <description>Method Symbol in syntax defined by the system</description>
        <label>Method Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MethodLabel__c</fullName>
        <label>Method Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MethodSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Method System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NameCode__c</fullName>
        <description>Name Symbol in syntax defined by the system</description>
        <label>Name Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NameLabel__c</fullName>
        <label>Name Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NameSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Name System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient this is about</description>
        <inlineHelpText>Patient this is about</inlineHelpText>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PerformingPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient who performed this observation</description>
        <inlineHelpText>Patient who performed this observation</inlineHelpText>
        <label>Performing Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>EHR Observations (Performing Patient)</relationshipLabel>
        <relationshipName>EhrObservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PerformingPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Practitioner who performed this observation</description>
        <inlineHelpText>Practitioner who performed this observation</inlineHelpText>
        <label>Performing Practitioner</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>EhrObservations (Performing Practitioner)</relationshipLabel>
        <relationshipName>EhrObservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PerformingRelatedPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related person who performed the observation</description>
        <inlineHelpText>Related person who performed the observation</inlineHelpText>
        <label>Performing Related Person</label>
        <referenceTo>HealthCloudGA__EhrRelatedPerson__c</referenceTo>
        <relationshipLabel>EHR Observations (Performing RelatedPersion)</relationshipLabel>
        <relationshipName>EhrObservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Practitioner who performed this observation</description>
        <inlineHelpText>Practitioner who performed this observation</inlineHelpText>
        <label>Practitioner</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceMeaningLabel__c</fullName>
        <label>Reference Meaning Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeAgeHigh__c</fullName>
        <label>Reference Range Age High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeAgeLow__c</fullName>
        <label>Reference Range Age Low</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeHighUnit__c</fullName>
        <label>Reference Range High Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeHighValue__c</fullName>
        <label>Reference Range High Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeLowUnit__c</fullName>
        <label>Reference Range Low Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeLowValue__c</fullName>
        <label>Reference Range Low Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeMeaningCode__c</fullName>
        <description>Reference Range Meaning Symbol in syntax defined by the system</description>
        <label>Reference Range Meaning Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeMeaningSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Reference Range Meaning System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReferenceRangeUnit__c</fullName>
        <label>Reference Range Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReliabilityCode__c</fullName>
        <label>Reliability Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reliability__c</fullName>
        <label>Reliability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ok</fullName>
                </value>
                <value>
                    <fullName>ongoing</fullName>
                </value>
                <value>
                    <fullName>early</fullName>
                </value>
                <value>
                    <fullName>questionable</fullName>
                </value>
                <value>
                    <fullName>calibrating</fullName>
                </value>
                <value>
                    <fullName>error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SampledData__c</fullName>
        <label>Sampled Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusCode__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>registered</fullName>
                </value>
                <value>
                    <fullName>preliminary</fullName>
                </value>
                <value>
                    <fullName>final</fullName>
                </value>
                <value>
                    <fullName>amended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueAttachment__c</fullName>
        <label>Value Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueCode__c</fullName>
        <description>Value Symbol in syntax defined by the system</description>
        <label>Value Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueLabel__c</fullName>
        <label>Value Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValuePeriodEndDate__c</fullName>
        <label>Value Period End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValuePeriodStartDate__c</fullName>
        <label>Value Period Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValuePeriod__c</fullName>
        <label>Value Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueQuantityUnit__c</fullName>
        <description>Actual Result</description>
        <inlineHelpText>Actual Result</inlineHelpText>
        <label>Value Quantity Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueQuantity__c</fullName>
        <description>Actual Result</description>
        <inlineHelpText>Actual Result</inlineHelpText>
        <label>Value Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueRatioDenominator__c</fullName>
        <label>Value Ratio Denominator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueRatioNumerator__c</fullName>
        <label>Value Ratio Numerator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueRatio__c</fullName>
        <label>Value Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataDimensions__c</fullName>
        <label>Value Sampled Data Dimensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataFactor__c</fullName>
        <label>Value Sampled Data Factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataLowerLimit__c</fullName>
        <label>Value Sampled Data Lower Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataOriginCodeLabel__c</fullName>
        <label>Value Sampled Data Origin Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataOriginCodeSystem__c</fullName>
        <label>Value Sampled Data Origin Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataOriginCode__c</fullName>
        <label>Value Sampled Data Origin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataOriginComparator__c</fullName>
        <label>Value Sampled Data Origin Comparator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataOriginSystem__c</fullName>
        <label>Value Sampled Data Origin System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataOriginUnits__c</fullName>
        <label>Value Sampled Data Origin Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataOriginValue__c</fullName>
        <label>Value Sampled Data Origin Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataOrigin__c</fullName>
        <label>Value Sampled Data Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataPeriodMili__c</fullName>
        <label>Value Sampled Data Period Mili</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledDataUpperLimit__c</fullName>
        <label>Value Sampled Data Upper Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSampledData__c</fullName>
        <label>Value Sampled Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ValueSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Value System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Observation</label>
    <nameField>
        <displayFormat>Obser-{0}</displayFormat>
        <label>EHR Observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Observations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>